--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,34 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+		rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Tinos:wght@400;700&display=swap" rel="stylesheet">
 	<title>Restoran Burger</title>
 </head>
+
 <body>
 	<div class="header">
-
-		<div class="conteiner">
+		<div class="container">
 
 			<div class="header-line">
 
 				<div class="header-logo">
-				<img src="img/LOGO.png" alt="logo">
+					<img src="img/LOGO.png" alt="logo">
 				</div>
 
 				<div class="nav">
 					<a class="nav-item" href="@">Main</ç>
-					<a class="nav-item" href="@">Menu</a>
-					<a class="nav-item" href="@">About</a>
-					<a class="nav-item" href="@">Booking</a>
+						<a class="nav-item" href="@">Menu</a>
+						<a class="nav-item" href="@">About</a>
+						<a class="nav-item" href="@">Booking</a>
 				</div>
 
 				<div class="cart">
 					<a href="#">
-					<img class="cart-img" src="img/cart.png" alt="cart">
+						<img class="cart-img" src="img/cart.png" alt="cart">
 					</a>
 				</div>
 
@@ -58,7 +60,7 @@
 
 			<div class="header-down">
 				<div class="header-title">
-					Welcome to 
+					Welcome to
 					<div class="header-subtitle">Our restaurant
 
 					</div>
@@ -71,5 +73,74 @@
 			</div>
 		</div>
 	</div>
+	<div class="cards">
+		<div class="container">
+			<div class="cards-holder">
+
+				<div class="card">
+					<div class="card-image">
+						<img class="card-img" src="img/Cards Group.png" alt="card-image">
+					</div>
+					<div class="card-title">Magical <span>Atmosphere</span> 
+					</div>
+					<div class="card-desc">In our establishment there is a magical atmosphere filled with delicious aromas.
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="card-image">
+						<img class="card-img" src="img/Cards Group.png" alt="card-image">
+					</div>
+					<div class="card-title">Best quality <span>Food</span> 
+					</div>
+					<div class="card-desc">The quality of our Food is excellent!
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="card-image">
+						<img class="card-img" src="img/Cards Group.png" alt="card-image">
+					</div>
+					<div class="card-title">Inexpensive <span>Food</span>
+					</div>
+					<div class="card-desc">The cost of our Food depends only on its quantity. The quality is always top notch!
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="history">
+
+		<div class="container">
+
+			<div class="history-holder">
+				<div class="history-info">
+					<div class="history-title">Our <span>History</span>
+					</div>
+					<div class="history-desc">Like any other original place, we have our own, special history. The idea of the restaurant came to the founders unexpectedly. During a walk through the forest, the founder of our restaurant got stuck hundreds of kilometers from the nearest settlement. Far from civilization and communication, they had to temporarily arrange a simple life for themselves, get and cook their own food.
+					</div>
+					<div class="history-number">
+						<div class="number-item">
+							93 <span>Drinks</span>
+						</div>
+						<div class="number-item">
+							206 <span>Food</span>
+						</div>
+						<div class="number-item">
+							71 <span>Snacks</span>
+						</div>
+					</div>
+				</div>
+				<div class="history-images">
+					<img src="./img/histori-images.jpg" alt="histori-images">
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
 </body>
+
 </html>
