--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="cards">
 		<div class="container">
 			<div class="cards-holder">
@@ -139,6 +140,114 @@
 
 		</div>
 
+	</div>
+
+	<div class="black-blok">
+		 <div class="container">
+			<div class="block-holder">
+				<div class="left">
+					<div class="left-title">Celebrate in one of the <br> very best restaurants.</div>
+					<div class="left-text">Only this month business lunch from $15</div>
+				</div>
+				<div class="right">
+					<div class="right-button">
+						<a href="#" class="right-btn">RESERVATION</a>
+					</div>
+				</div>
+			</div>
+		 </div>
+	</div>
+
+	<div class="dishes">
+		<div class="container">
+
+			<div class="dishes-title">Our <span>dishes</span>
+			</div>
+
+			<div class="burgers">
+				<div class="burgers-image">
+					<img src="./img/pizza.jpg" class="pizza">
+				</div>
+
+
+				<div class="burgers-items">
+					<div class="burger-item">
+						<img src="./img/burger.jpg" alt="burger" class="burger">
+						<div class="burger-text">
+						mini hamburger------------------------3 $
+						</div>
+					</div>
+
+					<div class="burger-item">
+						<img src="./img/burger.jpg" alt="burger" class="burger">
+						<div class="burger-text">
+						medium hamburger--------------------5 $
+						</div>
+					</div>
+
+					<div class="burger-item">
+						<img src="./img/burger.jpg" alt="burger" class="burger">
+						<div class="burger-text">
+						big hamburger--------------------------7 $
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="menu">
+		<div class="container">
+			<div class="menu-title">Our menu</div>
+				<div class="menu-items">
+					<div class="menu-item">
+						<div class="menu-image">
+							<img src="./img/menu-item.png" class="menu-img">
+							<div class="price"> 
+								<img src="./img/price.png" alt="price" class="price-image">
+								<div class="price-8">8 $</div>
+							</div>
+						</div>
+						<div class="menu-text">Burger-maxi</div>
+						<div class="menu-subtext">Maximum thick
+						layer of meat</div>
+						<div class="menu-button">
+							<a href="#" class="menu-btn">Order</a>
+						</div>
+					</div>
+					<div class="menu-item">
+						<div class="menu-image">
+							<img src="./img/menu-item.png" class="menu-img">
+							<div class="price">
+								<img src="./img/price.png" alt="price" class="price-image">
+								<div class="price-8">8 $</div>
+							</div>
+						</div>
+						<div class="menu-text">Burger-maxi</div>
+						<div class="menu-subtext">Maximum thick
+							layer of meat</div>
+						<div class="menu-button">
+							<a href="#" class="menu-btn">Order</a>
+						</div>
+					</div>
+					<div class="menu-item">
+						<div class="menu-image">
+							<img src="./img/menu-item.png" class="menu-img">
+							<div class="price">
+								<img src="./img/price.png" alt="price" class="price-image">
+								<div class="price-8">8 $</div>
+							</div>
+						</div>
+						<div class="menu-text">Burger-maxi</div>
+						<div class="menu-subtext">Maximum thick
+							layer of meat</div>
+						<div class="menu-button">
+							<a href="#" class="menu-btn">Order</a>
+						</div>
+					</div>
+				</div>
+		</div>
 	</div>
 
 </body>
