coment, galery, cook, futer

--- a/index.html
+++ b/index.html
@@ -250,6 +250,70 @@
 		</div>
 	</div>
 
+	<div class="coment">
+		<div class="container">
+			<div class="coment-text">
+				<p>I will remember my birthday in this restaurant for a long time! A piece of native Armenia!!! Special thanks for the
+				complement in the form of a fruit plate. We will recommend this restaurant to our friends and family!!!
+				</p>
+			</div>
+			<div class="coment-image">
+				<img src="./img/fase.png" alt="fase" class="coment-img">
+			</div>
+			<div class="coment-type">
+				Visitor
+			</div>
+			<div class="coment-name">
+				Jacob
+			</div>
+		</div>
+	</div>
+
+	<div class="galery">
+		<div class="container">
+			<div class="galery-title">
+				<span>Food</span> gallery
+			</div>
+			<div class="galery-content">
+				<div class="galery-left">
+					<div class="galery-up">
+						<img src="img/10.jpg" alt="img">
+					</div>
+					<div class="galery-down">
+						<img src="./img/20.jpg" alt="img">
+						<img src="./img/30.jpg" alt="img">
+					</div>
+				</div>
+				<div class="galery-right">
+					<div class="galery-up">
+						<img src="./img/20.jpg" alt="img">
+						<img src="./img/30.jpg" alt="img">
+					</div>
+					<div class="galery-down">
+						<img src="img/10.jpg" alt="img">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="cook">
+		<div class="container">
+			<div class="cook-title">
+				Our <span>Cook</span>
+			</div>
+			<div class="cook-content">
+				<img src="./img/cook 1.jpg" alt="foto">
+				<img src="./img/cook 2.jpg" alt="foto">
+				<img src="./img/cook 3.jpg" alt="foto">
+			</div>
+		</div>
+	</div>
+
+	<div class="futer">
+		<img src="./img/MAKE A RESERVATION.jpg" alt="img">
+	<p>Copyright 2022</p>
+	</div>
 </body>
 
 </html>
